increased chatbot bottom margin to prevent clipping on large screens

--- a/src/main/webapp/css/chatbot.css
+++ b/src/main/webapp/css/chatbot.css
@@ -8,7 +8,7 @@
 	position: fixed;
   	bottom: 0px;
   	right: 0px;
-  	margin-bottom: 50px;
+  	margin-bottom: 55px;
     font-family: Helvetica, Arial, sans-serif;
 }
 
